Fixed CustomCaffeineCacheManager tests and added client package with web client implementation

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8' // Added Caffeine dependency
     implementation 'org.springframework:spring-context-support'
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
+    implementation 'io.github.resilience4j:resilience4j-reactor:2.1.0'
+    implementation 'io.micrometer:micrometer-core'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 //    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
