updated cache and ML CB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=ProjectK
+
+# Enable bean definition overriding to resolve conflicts between configuration classes
+spring.main.allow-bean-definition-overriding=true
+
+# Disable caching to avoid initialization issues
+spring.cache.type=none
+
+# Disable Spring Security auto-configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# Permit all requests (fallback)
+security.ignored=/**
+
+# Weather API configuration
+weather.api.base-url=https://api.weather.gov
+
+#http://localhost:8080/api/weather/points?latitude=39.7456&longitude=-97.0892
